Gtk-3.20&3.22: [Caja] Fix missing background in rename-entry area (2)
* In case enabling 'show desktop-icons' option, we need to define
EelEditable.entry widget styling as well...
* In Gtk+ 3.2x, that widget is defined as 'widget.entry'.

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -1663,8 +1663,19 @@ PanelSeparator {
  * Caja *
  ********/
 
-.caja-desktop.caja-canvas-item {
+widget.caja-desktop.view { // desktop icon-grid styling
   @extend .nautilus-desktop.nautilus-canvas-item;
+
+  > widget.entry { // = EelEditableLabel.entry
+    &, &:focus {
+      transition: none;
+
+      &:selected { // FIXME: selection node doesn't work?
+        color: $selected_fg_color;
+        background-color: $selected_bg_color;
+      }
+    }
+  }
 }
 
 .caja-navigation-window {
